# clever_raytracer_name

./: CMakeLists.txt  LeM_input.txt  M_Mean_test.txt  M_Std_test.txt  M_Vx_test.txt  README.txt  TODO.txt  box.cpp  box.hpp  camera.hpp  cimodel.cpp  cimodel.hpp  climate.cpp  climate.hpp  commandArgs.cpp  commandArgs.hpp  compound.cpp  compound.hpp  constants.cpp  constants.hpp  energyBalance.cpp  energyBalance.hpp  equations.cpp  equations.hpp  farquharModel.cpp  farquharModel.hpp  grid.cpp  grid.hpp  io.cpp  leaf.cpp  leaf.hpp  main.cpp  material.hpp  normal.cpp  normal.hpp  parameters.cpp  parameters.hpp  point.cpp  point.hpp  ray.cpp  (+11 more)
